--- a/public/demos/edu-1/index.html
+++ b/public/demos/edu-1/index.html
@@ -673,5 +673,5 @@
 	
 </body>
 </html>
-<script type="text/javascript" src="/plugins/byy/src/byy.js"></script>
+<script type="text/javascript" src="/plugins/byy/byy.js"></script>
 <script type="text/javascript" src="index.js"></script>
