--- a/public/demos/canvas-snow/index.html
+++ b/public/demos/canvas-snow/index.html
@@ -10,7 +10,7 @@
 	
 </body>
 </html>
-<script type="text/javascript" src="http://byy.gcoder.win/byy/dist/byy.js"></script>
+<script type="text/javascript" src="/plugins/byy/byy.js"></script>
 <script type="text/javascript">
 	byy.setRequire({
 		base : '',
@@ -31,3 +31,4 @@
 	});
 	
 </script>
+<script type="text/javascript" src="/plugins/tongji.js"></script>
