--- a/public/demos/css-arrow/index.html
+++ b/public/demos/css-arrow/index.html
@@ -49,3 +49,4 @@
 </body>
 </html>
 <script type="text/javascript" src="/plugins/byy/byy.js"></script>
+<script type="text/javascript" src="/plugins/tongji.js"></script>
