--- a/public/demos/edu-1/index.html
+++ b/public/demos/edu-1/index.html
@@ -675,3 +675,4 @@
 </html>
 <script type="text/javascript" src="/plugins/byy/byy.js"></script>
 <script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="/plugins/tongji.js"></script>
