--- a/public/demos/js-cangku-filter/index.html
+++ b/public/demos/js-cangku-filter/index.html
@@ -47,3 +47,4 @@
 </html>
 <script type="text/javascript" src="/plugins/jquery/jquery.js"></script>
 <script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="/plugins/tongji.js"></script>
