--- a/public/demos/js-dropdown/index.html
+++ b/public/demos/js-dropdown/index.html
@@ -65,3 +65,4 @@
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
+<script type="text/javascript" src="/plugins/tongji.js"></script>
