--- a/public/demos/js-360/index.html
+++ b/public/demos/js-360/index.html
@@ -20,7 +20,7 @@
 </script>
 
 <script src="tour.js"></script>
-<script type="text/javascript" src="http://www.byyui.com/byy/dist/byy.js"></script>
+<script type="text/javascript" src="/plugins/byy/byy.js"></script>
 
 <div id="pano" style="width:100%;height:100%;">
 	<noscript><table style="width:100%;height:100%;"><tr style="vertical-align:middle;"><td><div style="text-align:center;">ERROR:<br/><br/>Javascript not activated<br/><br/></div></td></tr></table></noscript>
