--- a/public/demos/daily-weight/index.html
+++ b/public/demos/daily-weight/index.html
@@ -16,10 +16,17 @@
 			overflow:hidden;
 			box-sizing:border-box;
 		}
+		.form{
+			position:absolute;
+			top:10px;
+			left:10%;
+			width:300px;
+		}
+		.form-info{text-align:center;height:55px;line-height:55px;}
 	</style>
 </head>
 <body>
-	<div class="container">
+	<div class="fluid">
 		<div class="form-info">
 			记录我自己每天早上称的体重或晚上的体重，然后查看最近锻炼的效果。 
 		</div>
@@ -33,36 +40,86 @@
 				</div>
 			</form>
 		</div>
-		<div id="show">
+		<div id="show" style="height:800px;width:95%;margin:0px auto;">
 			
 		</div>
 	</div>
 </body>
 </html>
-<script type="text/javascript" src="./index.js"></script>
 <script type="text/javascript" src="/plugins/echarts/echarts.min.js"></script>
 <script type="text/javascript">
-	var xmlhttp;
+	
 	function save(){
 		var v = document.getElementById('weight').value;
+		var xmlhttp;
 		xmlhttp = new XMLHttpRequest();
-  		xmlhttp.open("GET",'/weight?weight='+v,true);
+  		xmlhttp.open("GET",'/weight/save?weight='+v,true);
   		xmlhttp.send(null);
 	}
+	function render(){
+		var xmlhttp;
+		xmlhttp = new XMLHttpRequest();
+		xmlhttp.onreadystatechange = getData;
+		xmlhttp.open('GET','/weight');
+		xmlhttp.send(null);
+		function getData(){
+			if(xmlhttp.readyState==4 && xmlhttp.status == 200){
+				var txt = xmlhttp.responseText;
+				var obj = JSON.parse(txt);
+				var name = [],val = [];
+				obj.data.forEach(function(item){
+					name.push(item.str);
+					val.push(item.weight);
+				})
+				var option = {
+					tooltip: {
+				        trigger: 'axis'
+				    },
+				    xAxis: {
+				        type: 'category',
+				        data : name,
+				        axisLabel : {
+				        	color : '#52C2BB'
+				        },
+				        splitLine : {
+				        	lineStyle:{
+				        		color : '#eee',
+				        		type : 'dotted'
+				        	}
+				        }
+				    },
+				    yAxis: {
+				        type: 'value',
+				        min : 80,
+				        splitNumber : 20,
+				        axisLabel : {
+				        	color : '#52C2BB'
+				        },
+				        splitLine : {
+				        	lineStyle:{
+				        		color : '#eee',
+				        		type : 'dotted'
+				        	}
+				        }
 
-	var option = {
-	    xAxis: {
-	        type: 'category'
-	    },
-	    yAxis: {
-	        type: 'value'
-	    },
-	    series: [{
-	        data: weight,
-	        type: 'line',
-	        smooth: true
-	    }]
-	};
-	var myChart = echarts.init(document.getElementById('show'));
-	myChart.setOption(option);
+				    },
+				    series: [{
+				        data: val,
+				        type: 'line',
+				        smooth: true,
+				        markPoint: {
+			                data: [
+			                    {type: 'max', name: '最肥的时候'},
+			                    {type: 'min', name: '最帅的时候'}
+			                ]
+			            },
+				    }]
+				};
+				var myChart = echarts.init(document.getElementById('show'));
+				myChart.setOption(option);
+			}
+		}
+	}
+	render();
+	
 </script>
