--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -13,13 +13,12 @@
 </head>
 <body>
     <div class="byy-form-info">
-        微信.dat文件解码仅限于在微信 /filestorage/image/ 或temp下的dat 图片文件，其他的文件无法解码。而且以现在的解码方式没办法把所有文件全部解码，会有失败的几率。
-        <br />
-        说明:<br />
-        1. 本站存储空间有限，所有上传文件解码完成后即可删除。<br />
-        2. 在该页面仅仅允许上传dat文件，且文件大小不能超过20M。<br />
-        3. 文件解码后dat文件即可删除，生成的图片文件会转成base64 后删除.<br />
-
+        微信.dat文件解码仅限于在微信 /filestorage/image/ 或temp下的dat 图片文件，其他的文件无法解码。而且以现在的解码方式没办法把所有文件全部解码，会有失败的几率。<br />
+        说明:
+        1. 本站存储空间有限，所有上传文件解码完成后即可删除。
+        2. 在该页面仅仅允许上传dat文件，且文件大小不能超过20M。
+        3. 文件解码后dat文件即刻删除，生成的图片文件会转成base64 后删除.<br />
+        <span style="color:red;font-size:10px;">如果各位同学觉的还好用，就多来我站点转转，加点人气!</span>
     </div>    
     <div class="text-center">
         <span class="byy-btn" id="upload">点击选择dat文件</span>
