--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>微信dat文件解码</title>
+    <title>微信dat文件在线解码</title>
     <link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
     <style>
         html,body{margin:0px;padding:0px;}
