--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -78,7 +78,7 @@
                 mimeType : 'application/octet-stream'
             },
             server : '/center/upload/dat',
-            size : 1024 * 1024,
+            size : 20 * 1024 * 1024,
             onSuccess : function(file,res){
                 if(res.success){
                     //添加图片
