--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -28,8 +28,24 @@
             <span class="byy-btn small danger" filter="clear">清空图片</span>
         </div>
         <!-- 图片区域-->
-        <div class="content">
+        <div class="content" style="min-height:500px;">
             
+        </div>
+        <div style="margin:20px auto;width:1000px;">
+        <!--糊口区域-->
+            <script type="text/javascript">
+                    (function() {
+                        var s = "_" + Math.random().toString(36).slice(2);
+                        document.write('<div style="" id="' + s + '"></div>');
+                        (window.slotbydup = window.slotbydup || []).push({
+                            id: "u4125857",
+                            container: s
+                        });
+                    })();
+            </script>
+            <!-- 多条广告如下脚本只需引入一次 -->
+            <script type="text/javascript" src="//cpro.baidustatic.com/cpro/ui/c.js" async="async" defer="defer" >
+            </script>
         </div>
     </div>
 </body>
@@ -103,4 +119,13 @@
             }
         });
     })
+</script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?6989c14fa2c7041996bde7f67269e2c0";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
 </script>
