--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -21,7 +21,7 @@
         <span style="color:red;font-size:10px;">如果各位同学觉的还好用，就多来我站点转转，加点人气!顺便帮给点个广告,糊口饭吃!</span>
     </div>    
     <div class="text-center">
-        <span class="byy-btn" id="upload">点击选择dat文件</span>
+        <span class="byy-btn" id="upload">点击选择dat文件(可批量选择)</span>
     </div>
     <div>
         <div class="tool" style="margin-bottom:20px;">
