--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -18,7 +18,7 @@
         1. 本站存储空间有限，所有上传文件解码完成后即可删除。
         2. 在该页面仅仅允许上传dat文件，且文件大小不能超过20M。
         3. 文件解码后dat文件即刻删除，生成的图片文件会转成base64 后删除.<br />
-        <span style="color:red;font-size:10px;">如果各位同学觉的还好用，就多来我站点转转，加点人气!顺便帮给点个广告,糊口饭吃!</span>
+        <span style="color:red;font-size:10px;">站点是开源的，可以去看代码就知道文件是否存储了。如果各位同学觉的还好用，就多来我站点转转，加点人气!顺便帮给点个广告,糊口饭吃!</span>
     </div>    
     <div class="text-center">
         <span class="byy-btn" id="upload">点击选择dat文件(可批量选择)</span>
@@ -28,7 +28,7 @@
             <span class="byy-btn small danger" filter="clear">清空图片</span>
         </div>
         <!-- 图片区域-->
-        <div class="content" style="min-height:500px;">
+        <div class="content" style="min-height:800px;">
             
         </div>
         <div style="margin:20px auto;width:1000px;">
