--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -25,7 +25,7 @@
     </div>
     <div>
         <div class="tool" style="margin-bottom:20px;">
-            <span class="byy-btn small danger" filter="clear">清空图片</span>
+            <span class="byy-btn small danger" filter="clear">清空图片</span><span style="margin-left:20px;" class="byy-btn small warm" filter="downloadall">全部下载</span>
         </div>
         <!-- 图片区域-->
         <div class="content" style="min-height:800px;">
@@ -84,6 +84,13 @@
                 var $p = $(this).parent();
                 var $img = $p.find('img');
                 downloadFile($img.attr('src'),(counter++)+'.png');
+            },
+            downloadall : function(){
+                $imgs = $('.content').find('img');
+                $imgs.each(function(i,item){
+                    var $img = $(item);
+                    downloadFile($img.attr('src'),(counter++)+'.png');
+                })
             }
         });
         byy.uploader().multiFile({
