--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -15,10 +15,10 @@
     <div class="byy-form-info">
         微信.dat文件解码仅限于在微信 /filestorage/image/ 或temp下的dat 图片文件，其他的文件无法解码。而且以现在的解码方式没办法把所有文件全部解码，会有失败的几率。<br />
         说明:
-        1. 本站存储空间有限，所有上传文件解码完成后即可删除。
+        1. 本站存储空间有限，所有上传文件解码完成后立刻删除。
         2. 在该页面仅仅允许上传dat文件，且文件大小不能超过20M。
         3. 文件解码后dat文件即刻删除，生成的图片文件会转成base64 后删除.<br />
-        <span style="color:red;font-size:10px;">站点是开源的，可以去看代码就知道文件是否存储了。如果各位同学觉的还好用，就多来我站点转转，加点人气!<span style="font-weight:bold;">顺便帮给点个广告,糊口饭吃!</span>服务器是1M带宽小水管,稍微等一会就有了，如果一直不出来，那估计是废了.. </span>
+        <span style="color:red;font-size:10px;">站点是开源的，可以去看代码就知道文件是否存储了。如果各位同学觉的还好用，就多来我站点转转，加点人气!<span style="font-weight:bold;font-size:14px">顺便帮给点个广告,糊口饭吃!(已有16位同学帮我实现了愿望)</span>服务器是1M带宽小水管,稍微等一会就有了，如果一直不出来，那估计是废了.. </span>
     </div>    
     <div class="text-center">
         <span class="byy-btn" id="upload">点击选择dat文件(可批量选择)</span>
