--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>微信dat文件在线解码</title>
+    <title>微信dat文件在线解码-解密为图片</title>
+    <meta name="description" content="微信wechat dat文件解密，将dat文件在线解码为图片，并可以直接进行下载，服务器绝不保存任何文件。">
+    <meta name="keywords" content="微信dat,dat文件解码,wechat dat decoder,在线解码dat,微信dat解码">
+    <meta name="author" content="BUG集散地">
+    <meta name="site" content="https://chrunlee.cn">
+    <meta name="title" content="微信dat文件在线解码-解密为图片">
     <link rel="stylesheet" href="/plugins/byy/css/default/byy.css">
     <style>
         html,body{margin:0px;padding:0px;}
