--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -23,7 +23,7 @@
         1. 本站存储空间有限，所有上传文件解码完成后立刻删除。
         2. 在该页面仅仅允许上传dat文件，且文件大小不能超过20M。
         3. 文件解码后dat文件即刻删除，生成的图片文件会转成base64 后删除.<br />
-        <span style="color:red;font-size:10px;">站点是开源的，可以去看代码就知道文件是否存储了。如果各位同学觉的还好用，就多来我站点转转，加点人气!<span style="font-weight:bold;font-size:14px">各位大大觉的有用就帮给点个广告,糊口饭吃!(已有16位同学帮我实现了愿望)</span>。服务器是1M带宽小水管,稍微等一会就有了，如果一直不出来，那估计是废了.. </span>
+        <span style="color:red;font-size:10px;">站点是开源的，可以去看代码就知道文件是否存储了。如果各位同学觉的还好用，就多来我站点转转，加点人气!<span style="font-weight:bold;font-size:14px">各位大大觉的有用就帮给点个广告,糊口饭吃!(已有20位同学帮我实现了愿望)</span>。服务器是1M带宽小水管,稍微等一会就有了，如果一直不出来，那估计是废了..。量大了后偶尔会有些异常处理问题导致服务器宕机..没关系，稍等几秒就重启啦。 </span>
     </div>    
     <div class="text-center">
         <span class="byy-btn" id="upload">点击选择dat文件(可批量选择)</span>
