--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -15,15 +15,17 @@
             padding:10px 20px;
             background-color:#fafafa;
         }
-        .left{padding-right:260px;font-size:16px;}
+        .left{padding-right:430px;font-size:16px;}
         .right{
             position:absolute;
             right:10px;
             top:10px;
-            width:250px;
+            width:420px;
             text-align:center;
         }
         .right p,.right img{text-align:center;font-weight:bold;line-height:22px;}
+        .money{}
+        .right img{float:left;width:200px;height:220px;}
     </style>
 </head>
 <body>
@@ -38,7 +40,10 @@
         </div>
         <div class="right">
             <p>友情捐助/提升服务</p>
-            <img src="https://chrunlee.cn/zhifubao.jpg" alt="">
+            <div class="money byy-clear">
+                <img src="https://chrunlee.cn/weixin.jpg" />
+                <img src="https://chrunlee.cn/zhifubao.jpg" alt="">
+            </div>
             <p>十块不嫌少，五十不嫌多</p>
         </div>
         
