--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -40,7 +40,7 @@
             5.各位老板可以扫右侧二维码捐助，也可以点下下边的广告进行间接支持.感谢！
         </div>
         <div class="right">
-            <p>友情捐助/提升服务</p>
+            <p>友情捐助/提升服务&nbsp;<span><a href="/article/friend-support.html" target="_blank">赞助记录</a></span></p>
             <div class="money byy-clear">
                 <img src="https://chrunlee.cn/weixin.jpg" />
                 <img src="https://chrunlee.cn/zhifubao.jpg" alt="">
