--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -15,12 +15,12 @@
             padding:10px 20px;
             background-color:#fafafa;
         }
-        .left{padding-right:430px;font-size:16px;}
+        .left{padding-right:620px;font-size:16px;}
         .right{
             position:absolute;
             right:10px;
             top:10px;
-            width:420px;
+            width:610px;
             text-align:center;
         }
         .right p,.right img{text-align:center;font-weight:bold;line-height:22px;}
@@ -44,6 +44,7 @@
             <p>友情捐助/提升服务&nbsp;<span><a href="/article/friend-support.html" target="_blank">赞助记录</a></span></p>
             <div class="money byy-clear">
                 <img src="https://chrunlee.cn/weixin.jpg" />
+                <img src="https://chrunlee.cn/hongbao.jpg" alt="">
                 <img src="https://chrunlee.cn/zhifubao.jpg" alt="">
             </div>
             <p>十块不嫌少，五十不嫌多</p>
