--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -35,7 +35,7 @@
             说明：<br />
             1.微信文件默认在【 C:\Users\Administrator\Documents\WeChat Files 】下，找到FileStorage/Image 下的dat文件上传即可。<br />
             <span style="text-decoration:line-through;">2.上传大小限制20M，实际上5M以上下载就会很慢了(服务器带宽1M,所以很慢).</span><br />
-            2.由于上传文件过多，严重影响了博客的访问速度..只能再次限制大小(1M).同时，本人提供有偿安装服务(20￥/次)，一次安装永久使用。QQ:735394843<br />
+            2.由于上传文件过多，严重影响了博客的访问速度..只能再次限制大小(1M).同时，本人提供软件或有偿安装服务(20￥/次)，软件本地解码，无文件大小限制。QQ:735394843<br />
             3.文件是获取即转，然后删除并下发base64图片内容<br />
             4.有编码能力的可以直接看源码，实现不难，这里主要提供给无编码能力的人使用.<br />
             5.各位老板可以扫右侧二维码捐助，也可以点下下边的广告进行间接支持.感谢！
