--- a/public/demos/wechat-dat/index.html
+++ b/public/demos/wechat-dat/index.html
@@ -38,7 +38,7 @@
             2.由于上传文件过多，严重影响了博客的访问速度..只能再次限制大小(1M).同时，本人提供软件或有偿安装服务(20￥/次)，软件本地解码，无文件大小限制。QQ:735394843<br />
             3.文件是获取即转，然后删除并下发base64图片内容<br />
             4.有编码能力的可以直接看源码，实现不难，这里主要提供给无编码能力的人使用.<br />
-            5.各位老板可以扫右侧二维码捐助，也可以点下下边的广告进行间接支持.感谢！
+            5.各位老板可以扫右侧二维码捐助，也可以点下下边的广告进行间接支持(点下广告相当于打赏一元哦).感谢！
         </div>
         <div class="right">
             <p>友情捐助/提升服务&nbsp;<span><a href="/article/friend-support.html" target="_blank">赞助记录</a></span></p>
